Ajustes adicionais